@@ -1,3 +1,7 @@
+2006-01-13  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add a bunch of links for gnome-icon-theme
+
 2006-01-13  Niko Mirthes  <nmirthes@gmail.com>
 
 	* legacy-icon-mapping.xml: Updates for more KDE icons
